 - Debugger: Fix boundary conditions in tab completion
 - Video: Fix an issue with very long filenames
 - SDL: Fix boundary conditions for joystick adjustments
 - Util: Fix a null-pointer issue when attempting to delete a key
 - SDL: Allocate properly sized input maps
 - ARM7: Handle writeback for PC in addressing modes 2 and 3
 - GBA: Handle out-of-bounds I/O access
Misc:
 - Qt: Show multiplayer numbers in window title
 - Qt: Handle saving input settings better
 - Debugger: Free watchpoints in addition to breakpoints
 - Qt: Move GL frame drawing back onto its own thread
 - GBA: Add status log level
 - GBA Thread: Add functionality for running callbacks on the GBA thread
 - Qt: Fast forward (held) option moved from Other to Emulation menu
 - GBA Memory: Soft-crash if jumping past the end of a ROM

0.2.0: (2015-04-03)
Features:
 - Support for gamepad axes, e.g. analog sticks or triggers
 - Add scale presets for up to 6x
 - Settings window
 - Bilinear resampling option
 - Add option to skip BIOS start screen
 - List of recently opened games
 - Support for games using the Solar Sensor
 - Better audio resampling via blip-buf
 - Game Pak overrides dialog for setting savetype and sensor values
 - Support for games using the tilt sensor
 - Remappable shortcuts for keyboard and gamepad
 - Rewinding of emulation
 - Implemented BIOS routines SoftReset, RegisterRamReset, Diff8bitUnFilterWram, Diff8bitUnFilterVram, and Diff16bitUnFilter
 - Support IPv6
 - Save directory of last loaded file
 - Support BPS patches
 - Automatically detect and optimize out idle loops
 - Configurable game overrides
 - Support loading 7-Zip files
 - Drag and drop game loading
 - Cheat code support
 - Runtime configurable audio driver
 - Libretro core for use with RetroArch and other front-ends
 - Controller profiles for setting different bindings for different controllers
 - Ability to lock aspect ratio
 - Local link cable support
 - Ability to switch which game controller is in use per instance